<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item android:id="@+id/my_profile"
            android:icon="@drawable/ic_my_profile"
            android:title="@string/myprofile"/>
        <item android:id="@+id/switch_passanger_driver"
            android:icon="@drawable/ic_switch"
            android:title="@string/switch_role"/>
        <item android:id="@+id/car"
            android:icon="@drawable/ic_car"
            android:title="@string/my_cars"/>
        <item android:id="@+id/settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>
        <item android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>
</menu>