<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center">
    <!--    android:background="@drawable/layout_bg"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passenger_dialog_title"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="25dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/base_title"/>

        <TextView
            android:id="@+id/passenger_dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/driver_name"/>

        <com.facebook.login.widget.ProfilePictureView
            android:id="@+id/passenger_dialog_profile_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <RatingBar
                android:id="@+id/passenger_driver_dialog_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"/>

        </LinearLayout>

       <!-- <TextView
            android:id="@+id/passenger_driver_dialog_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="12dp"/>
            -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0">





            <Button
                android:id="@+id/passenger_dialog_no"
                android:layout_width="0dip"
                android:layout_weight=".33"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:textColor="#FF4500"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/no" />

            <Button
                android:id="@+id/show_on_map"
                android:onClick="showOnMap"
                android:layout_width="0dip"
                android:layout_weight=".33"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="12dp"
                android:background="#FF4500"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/show_on_map" />

            <Button
                android:id="@+id/passenger_dialog_yes"
                android:layout_width="0dip"
                android:layout_weight=".33"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/yes"
                android:background="#FF4500"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>