<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:id="@+id/main_layout"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="top"
        android:gravity="center"
        android:background="#ffdb99">

        <ImageView
            android:id="@+id/car_change_dialog_car_image"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_add_car_to_my_cars"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/car_change_dialog_add_car"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_add_a_car"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/car_change_dialog_delete_car"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_car_delete"
            app:layout_constraintBottom_toTopOf="@+id/car_change_dialog_add_car"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@+id/top_layout"
        android:gravity="top"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_car_marka"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Spinner
            android:id="@+id/input_spinner"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="30dp"
            android:entries="@array/marka"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/input_kolor_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/select_color"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/input_spinner"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_car_kolor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <EditText
            android:id="@+id/input_nr"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/Registration"
            android:textSize="20sp"
            android:maxLength="7"
            android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/input_kolor_button" />

        <Button
            android:id="@+id/add_car_button"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="48dp"
            android:background="#FF4500"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/cancel_car_button"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="48dp"
            android:background="@null"
            android:text="@string/cancel"
            android:textColor="#FF4500"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/add_car_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/input_kolor_layout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="200dp"
        android:visibility="gone"
        android:background="#ffffff">

        <com.thebluealliance.spectrum.SpectrumPalette
            android:id="@+id/input_kolor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:spectrum_colors="@array/colors" />

    </LinearLayout>


</RelativeLayout>


