<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_driver"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:weightSum="1"
    tools:context=".googlemaps.MapDriver"
    tools:openDrawer="start">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutD"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1.0">

            <LinearLayout
                android:id="@+id/layout_mapa"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight=".9">

                <fragment
                    android:id="@+id/driver_mapFragment_layout"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_szukajka"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight=".1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0">

                <fragment
                    android:id="@+id/driver_place_autocomplete"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/driver_end_course_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="100dp"
            android:onClick="driverEndCourse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_end_course" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/centerMapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:layout_marginStart="16dp"
            android:onClick="centerMap"
            android:src="@drawable/ic_dialog_map"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/driver_cancel_course_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="100dp"
            android:onClick="driverCancelCourse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_cancel_course" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/stop_navigation_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="200dp"
            android:onClick="stopNavigation"
            android:src="@drawable/ic_stop_navigation_passenger_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/start_navigation_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="300dp"
            android:onClick="startNavigation"
            android:src="@drawable/ic_navigation_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="67dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_mode_driver" />

        <LinearLayout
            android:id="@+id/mini_passanger_found"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="horizontal"
            android:weightSum="1.0"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="#FFFFFF"
                android:orientation="horizontal">

                <com.facebook.login.widget.ProfilePictureView
                    android:id="@+id/driver_layout_profile_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:id="@+id/dane"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/passenger_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/name_surname"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:maxLines="2"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:layout_marginBottom="10dp">

                        <RatingBar
                            android:id="@+id/passenger_rating"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:isIndicator="true"
                            android:numStars="5" />


                    </LinearLayout>




                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/guziki"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:background="#FFFFFF">

                <Button
                    android:id="@+id/driver_no"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight=".33"
                    android:background="@null"
                    android:textColor="#FF4500"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/no" />

                <Button
                    android:id="@+id/driver_yes"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight=".33"
                    android:background="#FF4500"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/yes" />

            </LinearLayout>


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/destination_point_info"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#FFFFFF"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/eta_czas"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:gravity="start"
                android:textSize="18sp"
                android:text="@string/czas"/>

            <TextView
                android:id="@+id/dystans"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/eta_czas"
                android:gravity="start"
                android:text="@string/dystans"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lokacja"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintTop_toBottomOf="@+id/eta_czas"
                app:layout_constraintLeft_toLeftOf="parent"
                android:gravity="start"
                android:text="@string/lokacja"
                android:autoSizeTextType="uniform"
                android:textSize="18sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/mini_passanger_info_board"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="1.0"
            app:layout_constraintBottom_toBottomOf="parent">

                <com.facebook.login.widget.ProfilePictureView
                    android:id="@+id/profile_picture_passanger_info_board"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp" />

                    <TextView
                        android:id="@+id/passenger_name_info_board"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/name_surname"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:maxLines="1"/>

                        <RatingBar
                            android:id="@+id/passenger_rating_info_board"
                            style="?android:attr/ratingBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:isIndicator="true"
                            android:numStars="5" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_driver"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:visibility="gone"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/slide_menu_passanger" />

</androidx.drawerlayout.widget.DrawerLayout>